--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
@@ -293,6 +293,15 @@ border:none;
     }
     .aboutwebsite{
         background-repeat:repeat-y;
+    }
+    .book-card{
+        width: calc(50% - 1rem);
+        height: 350px; /* ارتفاع ثابت بسيط */
+        overflow: hidden;
+    }
+    .bookcardimg {
+        height: 50% !important;
+        object-fit: cover;
     }
 }
 .pages{
