--- a/index.html
+++ b/index.html
@@ -303,6 +303,9 @@ border:none;
         height: 50% !important;
         object-fit: cover;
     }
+    .introduction{
+        height:25%;
+    }
 }
 .pages{
     width:100%;
